Updated boot script to optinally set Log4j file and to accept JVM opts

--- a/standalone/Dockerfile
+++ b/standalone/Dockerfile
@@ -2,9 +2,9 @@ FROM openjdk:8u131-jdk-alpine
 LABEL maintainer "Emil Koutanov <ekoutanov@gmail.com>"
 
 COPY build/libs/flywheel-standalone-full-*jar .
-COPY docker/docker-flywheel.sh .
-RUN chmod +x docker-flywheel.sh
+COPY docker/flywheel-boot.sh .
+RUN chmod +x flywheel-boot.sh
 
 VOLUME /ext
 EXPOSE 8080
-ENTRYPOINT ["/docker-flywheel.sh"]
+ENTRYPOINT ["/flywheel-boot.sh"]
