--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,41 @@ apply plugin: 'java'
 apply plugin: 'jacoco'
 apply plugin: 'com.jfrog.bintray'
 
-def packageVersion = {
-  def versionFile = sourceSets.main.resources.srcDirs[0].path + '/' + project.name + '.version'
-  def version = new BufferedReader(new FileReader(versionFile)).readLine().trim()
+def versionFile(extension) {
+  sourceSets.main.resources.srcDirs[0].path + '/' + project.name + extension
+}
+
+def getVersion(extension) {
+  def versionFile = versionFile extension
+  def reader = new BufferedReader(new FileReader(versionFile))
+  def version = reader.readLine().trim()
+  reader.close()
   return version
-}()
+}
+
+def setVersion(extension, version) {
+  def versionFile = versionFile extension
+  def writer = new BufferedWriter(new FileWriter(versionFile))
+  writer.write(String.valueOf(version))
+  writer.close()
+}
+
+def packageVersion = getVersion '.version'
+def packageBuild = getVersion '.build'
+
+task getBuild() {
+  doLast {
+    println "At ${getVersion('.version')}_${getVersion('.build')}"
+  }
+}
+
+task nextBuild() {
+  doLast {
+    def build = Integer.parseInt(getVersion('.build'))
+    setVersion('.build', build + 1)
+    println "At ${getVersion('.version')}_${getVersion('.build')}"
+  }
+}
 
 group = 'au.com.williamhill.flywheel'
 version = packageVersion
@@ -23,7 +53,7 @@ repositories {
 
 dependencies {
   compile 'org.slf4j:slf4j-api:1.7.6'
-  compile 'com.obsidiandynamics.indigo:indigo-core:0.9.2'
+  compile 'com.obsidiandynamics.indigo:indigo-core:0.9.4'
   compile 'com.google.code.gson:gson:2.8.0'
   compile 'org.danilopianini:gson-extras:0.2.1'
   compile 'org.eclipse.jetty.websocket:websocket-server:9.4.5.v20170502'
@@ -34,7 +64,7 @@ dependencies {
   runtime 'org.slf4j:slf4j-log4j12:1.7.6'
   runtime 'log4j:log4j:1.2.17'
   
-  testCompile 'com.obsidiandynamics.indigo:indigo-assurance:0.9.2'
+  testCompile 'com.obsidiandynamics.indigo:indigo-assurance:0.9.4'
 }
 
 jacoco {
