Added JSON logger

--- a/standalone/src/main/resources/log4j.properties
+++ b/standalone/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=warn, CONSOLE, FILE
+log4j.rootCategory=warn, FILE, JSON
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.EnhancedPatternLayout
@@ -12,9 +12,13 @@ log4j.appender.FILE.MaxBackupIndex=10
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %t %C{1}.%M():%L %m%n
 
+log4j.appender.JSON=org.apache.log4j.ConsoleAppender
+log4j.appender.JSON.layout=au.com.williamhill.flywheel.log.JsonLayout
+log4j.appender.JSON.layout.mdcRoot=root
+
 log4j.logger.com.obsidiandynamics.indigo=warn
 log4j.logger.au.com.williamhill.flywheel=warn
-log4j.logger.au.com.williamhill.flywheel.beacon=info
+log4j.logger.au.com.williamhill.flywheel.beacon=warn
 log4j.logger.au.com.williamhill.flywheel.edge=warn
 log4j.logger.au.com.williamhill.flywheel.edge.auth=warn
 log4j.logger.au.com.williamhill.flywheel.remote=warn
