--- a/standalone/build.gradle
+++ b/standalone/build.gradle
@@ -11,6 +11,8 @@ repositories {
 
 dependencies {
   compile project(':')
+  compile 'org.slf4j:slf4j-log4j12:1.7.6'
+  compile 'log4j:log4j:1.2.17'
   
   testCompile 'junit:junit:4.12'
 }
