--- a/standalone/build.gradle
+++ b/standalone/build.gradle
@@ -14,6 +14,10 @@ dependencies {
   compile 'org.slf4j:slf4j-log4j12:1.7.6'
   compile 'log4j:log4j:1.2.17'
   
+  // used by Splunk HEC logger
+  compile 'org.apache.httpcomponents:httpclient:4.5.3'
+  compile 'org.apache.httpcomponents:httpasyncclient:4.1.3'
+  
   testCompile 'junit:junit:4.12'
 }
 
