--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,7 @@
 rootProject.name = 'flywheel'
 
+include 'flywheel-backplane-kafka'
+project(':flywheel-backplane-kafka').projectDir = new File(settingsDir, 'backplane-kafka')
+
 include 'flywheel-standalone'
 project(':flywheel-standalone').projectDir = new File(settingsDir, 'standalone')
