--- a/standalone/src/main/resources/log4j.properties
+++ b/standalone/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=warn, FILE, JSON
+log4j.rootCategory=warn, FILE, JSON, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.EnhancedPatternLayout
@@ -12,13 +12,20 @@ log4j.appender.FILE.MaxBackupIndex=10
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %t %C{1}.%M():%L %m%n
 
-log4j.appender.JSON=org.apache.log4j.ConsoleAppender
+log4j.appender.JSON=au.com.williamhill.flywheel.log.SplunkHECAppender
+log4j.appender.JSON.token=6D3F718E-AF3C-44B8-9D41-860A83BCE177
+log4j.appender.JSON.host=splunk-ec-sy3.prod.sbet.com.au
+log4j.appender.JSON.port=8088
+log4j.appender.JSON.https=true
+log4j.appender.JSON.index=platform_flywheel_dev
+log4j.appender.JSON.source=platform_flywheel_dev
+log4j.appender.JSON.sourcetype=hec
 log4j.appender.JSON.layout=au.com.williamhill.flywheel.log.JsonLayout
 log4j.appender.JSON.layout.mdcRoot=root
 
 log4j.logger.com.obsidiandynamics.indigo=warn
 log4j.logger.au.com.williamhill.flywheel=warn
-log4j.logger.au.com.williamhill.flywheel.beacon=warn
+log4j.logger.au.com.williamhill.flywheel.beacon=info
 log4j.logger.au.com.williamhill.flywheel.edge=warn
 log4j.logger.au.com.williamhill.flywheel.edge.auth=warn
 log4j.logger.au.com.williamhill.flywheel.remote=warn
