XMappedServlet support for Undertow and Jetty

--- a/standalone/src/main/resources/log4j.properties
+++ b/standalone/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=warn, FILE, JSON, CONSOLE
+log4j.rootCategory=warn, FILE, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.EnhancedPatternLayout
