--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,8 @@ dependencies {
   
   testCompile 'com.obsidiandynamics.indigo:indigo-assurance:0.9.4'
   testCompile 'org.apache.httpcomponents:httpclient:4.5.3'
+  testRuntime 'org.slf4j:slf4j-log4j12:1.7.25'
+  testRuntime 'log4j:log4j:1.2.17'
 }
 
 jacoco {
