Fixed docker build.

--- a/standalone/Dockerfile
+++ b/standalone/Dockerfile
@@ -1,8 +1,8 @@
 FROM openjdk:8u131-jdk-alpine
 LABEL maintainer "Emil Koutanov <ekoutanov@gmail.com>"
 
-COPY build/libs/flywheel-standalone-full-*jar .
-COPY docker/flywheel-boot.sh .
+COPY build/libs/flywheel-standalone-full-*jar /
+COPY docker/* /
 RUN chmod +x flywheel-boot.sh
 
 VOLUME /ext
