--- a/standalone/build.gradle
+++ b/standalone/build.gradle
@@ -11,8 +11,8 @@ repositories {
 
 dependencies {
   compile project(':')
+  compile 'org.slf4j:slf4j-log4j12:1.7.25'
   compile 'log4j:log4j:1.2.17' // need this on the compile classpath for the JSON layout and Splunk appender
-  runtime 'org.slf4j:slf4j-log4j12:1.7.25'
   
   // used by Splunk HEC logger
   compile 'org.apache.httpcomponents:httpclient:4.5.3'
