--- a/backplane-kafka/build.gradle
+++ b/backplane-kafka/build.gradle
@@ -14,4 +14,6 @@ dependencies {
   compile 'org.apache.kafka:kafka-clients:0.11.0.0'
   
   testCompile 'com.obsidiandynamics.indigo:indigo-assurance:0.9.4'
+  testRuntime 'org.slf4j:slf4j-log4j12:1.7.25'
+  testRuntime 'log4j:log4j:1.2.17'
 }
