--- a/backplane-kafka/build.gradle
+++ b/backplane-kafka/build.gradle
@@ -18,3 +18,11 @@ dependencies {
   testRuntime 'org.slf4j:slf4j-log4j12:1.7.25'
   testRuntime 'log4j:log4j:1.2.17'
 }
+
+test {
+  exclude '**/*IT.class'
+}
+
+task integrationTest(type: Test, description: 'Runs integration tests.', group: 'Verification') {
+  include '**/*IT.class'
+}
