--- a/standalone/build.gradle
+++ b/standalone/build.gradle
@@ -11,12 +11,7 @@ repositories {
 
 dependencies {
   compile project(':')
-  compile 'org.slf4j:slf4j-log4j12:1.7.25'
-  compile 'log4j:log4j:1.2.17' // need this on the compile classpath for the JSON layout and Splunk appender
-  
-  // used by Splunk HEC logger
-  compile 'org.apache.httpcomponents:httpclient:4.5.3'
-  compile 'org.apache.httpcomponents:httpasyncclient:4.1.3'
+  runtime project(':flywheel-logging-splunk')
   
   testCompile 'junit:junit:4.12'
 }
