Splunk logging running in batch mode

--- a/standalone/src/main/resources/log4j.properties
+++ b/standalone/src/main/resources/log4j.properties
@@ -6,9 +6,9 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%-5p %t %C{1}.%M(): %m%n
 log4j.appender.CONSOLE.follow=true
 
 log4j.appender.FILE=org.apache.log4j.RollingFileAppender
-log4j.appender.FILE.File=ext/log/flywheel.log
-log4j.appender.FILE.MaxFileSize=100MB
-log4j.appender.FILE.MaxBackupIndex=10
+log4j.appender.FILE.file=ext/log/flywheel.log
+log4j.appender.FILE.maxFileSize=100MB
+log4j.appender.FILE.maxBackupIndex=10
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %t %C{1}.%M():%L %m%n
 
@@ -18,6 +18,13 @@ log4j.appender.SPLUNK.token=6D3F718E-AF3C-44B8-9D41-860A83BCE177
 log4j.appender.SPLUNK.url=https://splunk-ec-sy3.prod.sbet.com.au:8088/services/collector
 log4j.appender.SPLUNK.index=platform_flywheel_dev
 log4j.appender.SPLUNK.source=platform_flywheel_dev
+log4j.appender.SPLUNK.batchMode=true
+log4j.appender.SPLUNK.maxBatchSizeEvents=100
+log4j.appender.SPLUNK.maxBatchSizeBytes=1MB
+log4j.appender.SPLUNK.maxInactiveTimeBeforeBatchFlush=1000
+log4j.appender.SPLUNK.maxQueueSize=100000
+log4j.appender.SPLUNK.dropEventsOnQueueFull=true
+
 log4j.appender.SPLUNK.sourcetype=hec
 log4j.appender.SPLUNK.layout=au.com.williamhill.flywheel.logging.JsonLayout
 log4j.appender.SPLUNK.layout.mdcRoot=root
