Splunk logging running in batch mode

--- a/standalone/src/main/resources/log4j.properties
+++ b/standalone/src/main/resources/log4j.properties
@@ -22,7 +22,7 @@ log4j.appender.SPLUNK.batchMode=true
 log4j.appender.SPLUNK.maxBatchSizeEvents=100
 log4j.appender.SPLUNK.maxBatchSizeBytes=1MB
 log4j.appender.SPLUNK.maxInactiveTimeBeforeBatchFlush=1000
-log4j.appender.SPLUNK.maxQueueSize=100000
+log4j.appender.SPLUNK.maxQueueSize=10MB
 log4j.appender.SPLUNK.dropEventsOnQueueFull=true
 
 log4j.appender.SPLUNK.sourcetype=hec
