--- a/standalone/ext/conf/log4j.properties
+++ b/standalone/ext/conf/log4j.properties
@@ -6,9 +6,9 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%-5p %t %C{1}.%M(): %m%n
 log4j.appender.CONSOLE.follow=true
 
 log4j.appender.FILE=org.apache.log4j.RollingFileAppender
-log4j.appender.FILE.File=ext/log/flywheel.log
-log4j.appender.FILE.MaxFileSize=100MB
-log4j.appender.FILE.MaxBackupIndex=10
+log4j.appender.FILE.file=ext/log/flywheel.log
+log4j.appender.FILE.maxFileSize=100MB
+log4j.appender.FILE.maxBackupIndex=10
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %t %C{1}.%M():%L %m%n
 
