Moved YConf to a separate module

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,6 @@ project(':flywheel-logging-splunk').projectDir = new File(settingsDir, 'logging-
 
 include 'flywheel-standalone'
 project(':flywheel-standalone').projectDir = new File(settingsDir, 'standalone')
+
+include 'flywheel-yconf'
+project(':flywheel-yconf').projectDir = new File(settingsDir, 'yconf')
