--- a/yconf/src/test/resources/test.yaml
+++ b/yconf/src/test/resources/test.yaml
@@ -3,14 +3,14 @@ foo:
   b: 123
   c: false
 bar:
-  _type: au.com.williamhill.flywheel.yconfig.YBar
+  _type: com.obsidiandynamics.yconf.YBar
   num: 42
   items:
-  - _type: au.com.williamhill.flywheel.yconfig.YFoo
+  - _type: com.obsidiandynamics.yconf.YFoo
     a: Another string
     b: 456
   - &1
-    _type: au.com.williamhill.flywheel.yconfig.YFoo
+    _type: com.obsidiandynamics.yconf.YFoo
     a: null
     b: 789
   - # will be a null
