--- a/standalone/build.gradle
+++ b/standalone/build.gradle
@@ -13,6 +13,9 @@ dependencies {
   compile project(':')
   compile project(':flywheel-yconf')
   compile 'org.yaml:snakeyaml:1.18'
+  compile 'de.odysseus.juel:juel-api:2.2.7'
+  compile 'de.odysseus.juel:juel-impl:2.2.7'
+  
   runtime project(':flywheel-logging-splunk')
   
   testCompile 'com.obsidiandynamics.indigo:indigo-assurance:0.9.4'
