--- a/yconf/build.gradle
+++ b/yconf/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'jacoco'
 
 group = project(':').group
 version = project(':').version
@@ -14,4 +15,21 @@ dependencies {
   compile 'org.yaml:snakeyaml:1.18'
   
   testCompile 'junit:junit:4.12'
+}
+
+jacoco {
+  toolVersion = "0.7.9"
+}
+
+jacocoTestReport {
+  dependsOn test
+  reports {
+    xml.enabled false
+    html.enabled true
+  }
+}
+
+jar {
+  baseName packageName
+  finalizedBy jacocoTestReport
 }
