Masking of secrets

--- a/standalone/ext/conf/default/profile.yaml
+++ b/standalone/ext/conf/default/profile.yaml
@@ -1,3 +1,5 @@
 properties:
-  flywheel.xxx.yyy: ${env.buildNo * 2 + 1}
-  flywheel.xxx.zzz: 200
+  flywheel.logging.splunk.url: ${env.FLYWHEEL_SPLUNK_URL}
+  flywheel.logging.splunk.token:
+    type: flywheel.yconf.Masked
+    value: ${env.FLYWHEEL_SPLUNK_TOKEN}
