--- a/standalone/src/main/resources/log4j.properties
+++ b/standalone/src/main/resources/log4j.properties
@@ -14,8 +14,6 @@ log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %t %C{
 
 #log4j.appender.SPLUNK=org.apache.log4j.ConsoleAppender
 log4j.appender.SPLUNK=au.com.williamhill.flywheel.logging.SplunkHECAppender
-log4j.appender.SPLUNK.token=6D3F718E-AF3C-44B8-9D41-860A83BCE177
-log4j.appender.SPLUNK.url=https://splunk-ec-sy3.prod.sbet.com.au:8088/services/collector
 log4j.appender.SPLUNK.index=platform_flywheel_dev
 log4j.appender.SPLUNK.source=platform_flywheel_dev
 log4j.appender.SPLUNK.batchMode=true
@@ -30,7 +28,7 @@ log4j.appender.SPLUNK.layout=au.com.williamhill.flywheel.logging.JsonLayout
 log4j.appender.SPLUNK.layout.mdcRoot=root
 
 log4j.logger.com.obsidiandynamics.indigo=warn
-log4j.logger.au.com.williamhill.flywheel=warn
+log4j.logger.au.com.williamhill.flywheel=info
 log4j.logger.au.com.williamhill.flywheel.beacon=info
 log4j.logger.au.com.williamhill.flywheel.edge=warn
 log4j.logger.au.com.williamhill.flywheel.edge.auth=warn
