More launcher work

--- a/standalone/Dockerfile
+++ b/standalone/Dockerfile
@@ -3,8 +3,8 @@ LABEL maintainer "Emil Koutanov <ekoutanov@gmail.com>"
 
 COPY build/libs/flywheel-standalone-full-*jar /
 COPY docker/* /
-RUN chmod +x flywheel-boot.sh
+RUN chmod +x flywheel-*.sh
 
 VOLUME /ext
 EXPOSE 8080
-ENTRYPOINT ["/flywheel-boot.sh"]
+ENTRYPOINT ["/flywheel-launch.sh"]
