--- a/standalone/ext/conf/default/profile.yaml
+++ b/standalone/ext/conf/default/profile.yaml
@@ -1,5 +1,5 @@
 properties:
   flywheel.logging.splunk.url: ${env.FLYWHEEL_SPLUNK_URL}
-  flywheel.logging.splunk.token:
-    type: flywheel.yconf.Masked
-    value: ${env.FLYWHEEL_SPLUNK_TOKEN}
+  flywheel.logging.splunk.token: ${flywheel:mask(env.FLYWHEEL_SPLUNK_TOKEN)}
+launcher: 
+  type: flywheel.BeaconLauncher
