--- a/standalone/src/main/resources/log4j.properties
+++ b/standalone/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%-5p %t %C{1}.%M(): %m%n
 log4j.appender.CONSOLE.follow=true
 
 log4j.appender.FILE=org.apache.log4j.RollingFileAppender
-log4j.appender.FILE.file=ext/log/flywheel.log
+log4j.appender.FILE.file=log/flywheel.log
 log4j.appender.FILE.maxFileSize=100MB
 log4j.appender.FILE.maxBackupIndex=10
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
