Split out WHA-specific config into a separate module

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,5 +9,8 @@ project(':flywheel-logging-splunk').projectDir = new File(settingsDir, 'logging-
 include 'flywheel-standalone'
 project(':flywheel-standalone').projectDir = new File(settingsDir, 'standalone')
 
+include 'flywheel-wha'
+project(':flywheel-wha').projectDir = new File(settingsDir, 'wha')
+
 include 'flywheel-yconf'
 project(':flywheel-yconf').projectDir = new File(settingsDir, 'yconf')
