--- a/yconf/src/test/resources/context-test.yaml
+++ b/yconf/src/test/resources/context-test.yaml
@@ -1,16 +1,17 @@
+_type: MappingContextTest$FooBar
 foo:
   a: A string
   b: 123
   c: false
 bar:
-  _type: YBar
+  _type: MappingContextTest$Bar
   num: 42
   items:
-  - _type: YFoo
+  - _type: MappingContextTest$Foo
     a: Another string
     b: 456
   - &1
-    _type: YFoo
+    _type: MappingContextTest$Foo
     a: null
     b: 789
   - # will be a null
