Explicit use of NotNull wrapper to detect null property values

--- a/standalone/conf/test/profile.yaml
+++ b/standalone/conf/test/profile.yaml
@@ -2,4 +2,4 @@ properties:
   TestLauncher.a: a
   TestLauncher.b: b
 launcher: 
-  type: flywheel.TestLauncher
+  type: au.com.williamhill.flywheel.TestLauncher
