--- a/standalone/conf/default/profile.yaml
+++ b/standalone/conf/default/profile.yaml
@@ -2,7 +2,7 @@ properties:
   log4j.configuration: file:conf/default/log4j-default.properties
 
 launcher: 
-  type: flywheel.BeaconLauncher
+  type: au.com.williamhill.flywheel.BeaconLauncher
   
 backplane:
-  type: flywheel.edge.backplane.NoOpBackplane
+  type: au.com.williamhill.flywheel.edge.backplane.NoOpBackplane
