--- a/wha/Dockerfile
+++ b/wha/Dockerfile
@@ -2,7 +2,7 @@ FROM openjdk:8u131-jdk-alpine
 LABEL maintainer "Emil Koutanov <ekoutanov@gmail.com>"
 
 COPY build/libs/flywheel-*jar /
-COPY docker/* /
+COPY build/docker/* /
 RUN mkdir conf
 COPY conf/ /conf/
 RUN chmod +x flywheel-*.sh
