YConf: array mapping support

--- a/standalone/conf/test/profile.yaml
+++ b/standalone/conf/test/profile.yaml
@@ -3,5 +3,4 @@ properties:
   TestLauncher.b: b
 launcher: 
   type: au.com.williamhill.flywheel.TestLauncher
-serverConfig:
-  _:
+serverConfig: {}
