--- a/standalone/conf/default/profile.yaml
+++ b/standalone/conf/default/profile.yaml
@@ -18,4 +18,4 @@ serverConfig:
     name: health
     servletClass: au.com.williamhill.flywheel.health.HealthServlet  
   endpointConfig:
-    highWaterMark: ${f:maxLong()}
+    highWaterMark: ${maxLong}
