--- a/standalone/conf/default/profile.yaml
+++ b/standalone/conf/default/profile.yaml
@@ -2,20 +2,18 @@ properties:
   log4j.configuration: file:conf/default/log4j-default.properties
 
 launcher: 
-  type: au.com.williamhill.flywheel.ProfileLauncher
-  
-backplane:
-  type: au.com.williamhill.flywheel.edge.backplane.NoOpBackplane
-
-serverConfig:
-  port: 8080
-  path: /broker
-  idleTimeoutMillis: 300000
-  pingIntervalMillis: 60000
-  scanIntervalMillis: 1000
-  servlets:
-  - path: /health/*
-    name: health
-    servletClass: au.com.williamhill.flywheel.health.HealthServlet  
-  endpointConfig:
-    highWaterMark: ${maxLong}
+  type: au.com.williamhill.flywheel.ConfigLauncher
+  backplane:
+    type: au.com.williamhill.flywheel.edge.backplane.NoOpBackplane
+  serverConfig:
+    port: 8080
+    path: /broker
+    idleTimeoutMillis: 300000
+    pingIntervalMillis: 60000
+    scanIntervalMillis: 1000
+    servlets:
+    - path: /health/*
+      name: health
+      servletClass: au.com.williamhill.flywheel.health.HealthServlet  
+    endpointConfig:
+      highWaterMark: ${maxLong}
