--- a/standalone/conf/test/profile.yaml
+++ b/standalone/conf/test/profile.yaml
@@ -1,5 +1,6 @@
 properties:
   TestLauncher.a: a
   TestLauncher.b: b
-launcher: 
-  type: au.com.williamhill.flywheel.TestLauncher
+  
+launchers: 
+- type: au.com.williamhill.flywheel.TestLauncher
