--- a/yconf/build.gradle
+++ b/yconf/build.gradle
@@ -13,7 +13,7 @@ repositories {
 dependencies {
   compile 'org.yaml:snakeyaml:1.18'
   
-  testCompile 'junit:junit:4.12'
+  testCompile 'com.obsidiandynamics.indigo:indigo-assurance:0.9.4'
 }
 
 jacoco {
