--- a/standalone/conf/default/log4j-default.properties
+++ b/standalone/conf/default/log4j-default.properties
@@ -14,9 +14,10 @@ log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %t %C{
 
 log4j.logger.com.obsidiandynamics.indigo=warn
 log4j.logger.au.com.williamhill.flywheel=info
-log4j.logger.au.com.williamhill.flywheel.beacon=info
 log4j.logger.au.com.williamhill.flywheel.edge=warn
 log4j.logger.au.com.williamhill.flywheel.edge.auth=warn
+log4j.logger.au.com.williamhill.flywheel.edge.plugin.beacon=info
+log4j.logger.au.com.williamhill.flywheel.edge.plugin.toplog=debug
 log4j.logger.au.com.williamhill.flywheel.remote=warn
 log4j.logger.au.com.williamhill.flywheel.topic=warn
 log4j.logger.au.com.williamhill.flywheel.socketx=warn
