--- a/wha/conf/wha/log4j-wha.properties
+++ b/wha/conf/wha/log4j-wha.properties
@@ -27,9 +27,10 @@ log4j.appender.SPLUNK.layout.mdcRoot=root
 
 log4j.logger.com.obsidiandynamics.indigo=warn
 log4j.logger.au.com.williamhill.flywheel=info
-log4j.logger.au.com.williamhill.flywheel.beacon=info
 log4j.logger.au.com.williamhill.flywheel.edge=warn
 log4j.logger.au.com.williamhill.flywheel.edge.auth=warn
+log4j.logger.au.com.williamhill.flywheel.edge.plugin.beacon=info
+log4j.logger.au.com.williamhill.flywheel.edge.plugin.toplog=debug
 log4j.logger.au.com.williamhill.flywheel.remote=warn
 log4j.logger.au.com.williamhill.flywheel.topic=warn
 log4j.logger.au.com.williamhill.flywheel.socketx=warn
