--- a/plugin-toplog/build.gradle
+++ b/plugin-toplog/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'jacoco'
 group = project(':').group
 version = project(':').version
 
-def packageName = 'flywheel-backplane-kafka'
+def packageName = 'flywheel-toplog'
 
 repositories {
   jcenter()
@@ -12,20 +12,8 @@ repositories {
 
 dependencies {
   compile project(':')
-  compile project(':').sourceSets.test.output
-  compile 'org.apache.kafka:kafka-clients:0.11.0.0'
   
   testCompile 'com.obsidiandynamics.indigo:indigo-assurance:0.9.4'
-  testRuntime 'org.slf4j:slf4j-log4j12:1.7.25'
-  testRuntime 'log4j:log4j:1.2.17'
-}
-
-test {
-  exclude '**/*IT.class'
-}
-
-task integrationTest(type: Test, description: 'Runs integration tests.', group: 'Verification') {
-  include '**/*IT.class'
 }
 
 jacoco {
