--- a/standalone/build.gradle
+++ b/standalone/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'jacoco'
 
 group = project(':').group
 version = project(':').version
@@ -11,12 +12,26 @@ repositories {
 
 dependencies {
   compile project(':')
+  compile project(':flywheel-plugin-beacon')
+  compile project(':flywheel-plugin-toplog')
   compile 'de.odysseus.juel:juel-api:2.2.7'
   compile 'de.odysseus.juel:juel-impl:2.2.7'
   
   runtime project(':flywheel-logging-splunk')
   
   testCompile 'com.obsidiandynamics.indigo:indigo-assurance:0.9.4'
+}
+
+jacoco {
+  toolVersion = "0.7.9"
+}
+
+jacocoTestReport {
+  dependsOn test
+  reports {
+    xml.enabled false
+    html.enabled true
+  }
 }
 
 jar {
@@ -28,6 +43,7 @@ jar {
     configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) }
   }   
   baseName packageName + '-full'
+  finalizedBy jacocoTestReport
 }
 
 task dockerBuild(type: Exec) {
