--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,58 @@ plugins {
   id 'com.jfrog.bintray' version '1.7.3'
 }
 apply plugin: 'maven-publish'
-apply plugin: 'java'
-apply plugin: 'jacoco'
 apply plugin: 'com.jfrog.bintray'
+
+allprojects {
+  apply plugin: 'java'
+  apply plugin: 'jacoco'
+
+  repositories {
+    jcenter()
+  }
+
+  jacoco {
+    toolVersion = '0.7.9'
+  }
+
+  jacocoTestReport {
+    additionalSourceDirs = files(sourceSets.main.allSource.srcDirs)
+    sourceDirectories = files(sourceSets.main.allSource.srcDirs)
+    classDirectories = files(sourceSets.main.output)
+    reports {
+      html.enabled = true
+      xml.enabled = true
+      csv.enabled = false
+    }
+  }
+}
+
+subprojects {
+  dependencies {
+    testCompile 'junit:junit:4.12'
+  }
+}
+
+task jacocoRootReport(type: JacocoReport) {
+  dependsOn = allprojects.test
+  additionalSourceDirs = files(allprojects.sourceSets.main.allSource.srcDirs)
+  sourceDirectories = files(allprojects.sourceSets.main.allSource.srcDirs)
+  classDirectories = files(allprojects.sourceSets.main.output)
+  executionData = files(allprojects.jacocoTestReport.executionData)
+  reports {
+    html.enabled = true
+    xml.enabled = false
+    csv.enabled = false
+  }
+  onlyIf = {
+    true
+  }
+  doFirst {
+    executionData = files(executionData.findAll {
+      it.exists()
+    })
+  }
+}
 
 def versionFile(extension) {
   sourceSets.main.resources.srcDirs[0].path + '/' + project.name + extension
@@ -69,18 +118,6 @@ dependencies {
   testRuntime 'log4j:log4j:1.2.17'
 }
 
-jacoco {
-  toolVersion = "0.7.9"
-}
-
-jacocoTestReport {
-  dependsOn test
-  reports {
-    xml.enabled false
-    html.enabled true
-  }
-}
-
 def envUser = 'BINTRAY_USER'
 def envKey = 'BINTRAY_KEY'
 task bintrayCredentialsCheck {
@@ -127,7 +164,7 @@ bintrayUpload {
 
 jar {
   baseName packageName
-  finalizedBy jacocoTestReport
+  finalizedBy jacocoRootReport
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
