--- a/plugin-beacon/build.gradle
+++ b/plugin-beacon/build.gradle
@@ -6,7 +6,10 @@ def packageName = 'flywheel-beacon'
 dependencies {
   compile project(':')
   
+  testCompile project(':').sourceSets.test.output
   testCompile 'com.obsidiandynamics.indigo:indigo-assurance:0.9.4'
+  testRuntime 'org.slf4j:slf4j-log4j12:1.7.25'
+  testRuntime 'log4j:log4j:1.2.17'
 }
 
 jar {
