Explicit Pub/SubAuthChain

--- a/wha/conf/wha/profile.yaml
+++ b/wha/conf/wha/profile.yaml
@@ -21,6 +21,8 @@ launchers:
       servletClass: au.com.williamhill.flywheel.health.HealthServlet  
     endpointConfig:
       highWaterMark: ${maxLong}
+  pubAuthChain:
+  subAuthChain:
   plugins:
   - type: au.com.williamhill.flywheel.edge.plugin.beacon.Beacon
     topic: time
