--- a/standalone/conf/default/profile.yaml
+++ b/standalone/conf/default/profile.yaml
@@ -17,6 +17,8 @@ launchers:
       servletClass: au.com.williamhill.flywheel.health.HealthServlet  
     endpointConfig:
       highWaterMark: ${maxLong}
+  pubAuthChain:
+  subAuthChain:
   plugins:
   - type: au.com.williamhill.flywheel.edge.plugin.beacon.Beacon
     topic: time
