--- a/auth-proxy-http/build.gradle
+++ b/auth-proxy-http/build.gradle
@@ -9,4 +9,8 @@ dependencies {
   compile 'org.apache.httpcomponents:httpasyncclient:4.1.3'
   
   testCompile 'com.obsidiandynamics.indigo:indigo-assurance:0.9.4'
+  testCompile 'com.github.tomakehurst:wiremock-standalone:2.7.1'
+  
+  testRuntime 'org.slf4j:slf4j-log4j12:1.7.25'
+  testRuntime 'log4j:log4j:1.2.17'
 }
