--- a/wha/conf/wha/log4j-wha.properties
+++ b/wha/conf/wha/log4j-wha.properties
@@ -29,6 +29,7 @@ log4j.logger.com.obsidiandynamics.indigo=warn
 log4j.logger.au.com.williamhill.flywheel=info
 log4j.logger.au.com.williamhill.flywheel.edge=warn
 log4j.logger.au.com.williamhill.flywheel.edge.auth=warn
+log4j.logger.au.com.williamhill.flywheel.edge.backplane.kafka=trace
 log4j.logger.au.com.williamhill.flywheel.edge.plugin.beacon=info
 log4j.logger.au.com.williamhill.flywheel.edge.plugin.toplog=info
 log4j.logger.au.com.williamhill.flywheel.remote=warn
