Kafka backplane config rewritten to use free-from properties.

--- a/wha/conf/wha/log4j-wha.properties
+++ b/wha/conf/wha/log4j-wha.properties
@@ -29,7 +29,7 @@ log4j.logger.com.obsidiandynamics.indigo=warn
 log4j.logger.au.com.williamhill.flywheel=info
 log4j.logger.au.com.williamhill.flywheel.edge=warn
 log4j.logger.au.com.williamhill.flywheel.edge.auth=warn
-log4j.logger.au.com.williamhill.flywheel.edge.backplane.kafka.KafkaBackplane=trace
+log4j.logger.au.com.williamhill.flywheel.edge.backplane.kafka.KafkaBackplane=debug
 log4j.logger.au.com.williamhill.flywheel.edge.plugin.beacon=info
 log4j.logger.au.com.williamhill.flywheel.edge.plugin.toplog=info
 log4j.logger.au.com.williamhill.flywheel.remote=warn
