--- a/auth-proxy-http/build.gradle
+++ b/auth-proxy-http/build.gradle
@@ -8,6 +8,7 @@ dependencies {
   compile 'org.apache.httpcomponents:httpclient:4.5.3'
   compile 'org.apache.httpcomponents:httpasyncclient:4.1.3'
   
+  testCompile project(':').sourceSets.test.output
   testCompile 'com.obsidiandynamics.indigo:indigo-assurance:0.9.4'
   testCompile 'com.github.tomakehurst:wiremock-standalone:2.7.1'
   
