--- a/auth-proxy-http/src/test/resources/proxy-auth-http-config.yaml
+++ b/auth-proxy-http/src/test/resources/proxy-auth-http-config.yaml
@@ -1,3 +1,4 @@
-uri: http://localhost:8090/auth
-poolSize: 4
-timeoutMillis: 30000
+config:
+  uri: http://localhost:8090/auth
+  poolSize: 4
+  timeoutMillis: 30000
