--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,6 +1,9 @@
-log4j.rootCategory=warn, CONSOLE
+log4j.rootCategory=trace, CONSOLE, NULL
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.EnhancedPatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%-5p %t %C{1}.%M(): %m%n
-log4j.appender.CONSOLE.follow=true
+log4j.appender.CONSOLE.threshold=warn
+
+log4j.appender.NULL=org.apache.log4j.varia.NullAppender
+log4j.appender.NULL.threshold=trace
