--- a/src/test/resources/cached-authenticator-config.yaml
+++ b/src/test/resources/cached-authenticator-config.yaml
@@ -3,5 +3,6 @@ config:
   queryBeforeExpiryMillis: 2
   minQueryIntervalMillis: 3
   maxPendingQueries: 4
+  residenceTimeMillis: 5
 delegate:
   type: au.com.williamhill.flywheel.edge.auth.NoOpDelegate
