--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'flywheel'
 
-include 'flywheel-auth-proxy-http'
-project(':flywheel-auth-proxy-http').projectDir = new File(settingsDir, 'auth-proxy-http')
+include 'flywheel-auth-stub-http'
+project(':flywheel-auth-stub-http').projectDir = new File(settingsDir, 'auth-stub-http')
 
 include 'flywheel-backplane-kafka'
 project(':flywheel-backplane-kafka').projectDir = new File(settingsDir, 'backplane-kafka')
